tests/negative/gold/type6_test.gold
tests/negative/type6_test.toit:7:5: error: All expressions in a sequence must be indented the same way
    unresolved
    ^~~~~~~~~~
tests/negative/type6_test.toit:7:5: error: Unresolved identifier: 'unresolved'
    unresolved
    ^~~~~~~~~~
tests/negative/type6_test.toit:8:15: error: Unresolved identifier: 'unresolved'
  lambda.call unresolved
              ^~~~~~~~~~
Compilation failed.
